--- a/style.css
+++ b/style.css
@@ -8,3 +8,10 @@
   box-shadow: none;
   border: none;
 }
+
+.footer-background {
+  background-color: #292929;
+  padding-top: 45px;
+  color: white;
+
+}
